correction: edit visual markdown

--- a/src/pages/fr/projects/[slug].astro
+++ b/src/pages/fr/projects/[slug].astro
@@ -52,8 +52,11 @@ const { Content } = await entry.render();
     </div>
 
     <div
-      class="prose prose-invert prose-blue max-w-none
-      prose-h3:text-2xl prose-h3:mt-12 prose-p:text-slate-400 prose-p:leading-relaxed"
+      class="mt-12 prose prose-invert prose-blue max-w-none
+      prose-h3:text-2xl prose-h3:font-bold prose-h3:text-slate-100
+      prose-p:text-slate-400 prose-p:leading-relaxed
+      prose-li:text-slate-400
+      prose-strong:text-blue-400"
     >
       <Content />
     </div>
