--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,4 @@
 ---
-// Redirection automatique vers la langue par défaut (fr)
-return Astro.redirect("/fr/");
+// src/pages/index.astro
+---
+<meta http-equiv="refresh" content="0;url=/fr/" />
